1-Section is Added to Home Page

--- a/src/Compoenent/Objective/objective.css
+++ b/src/Compoenent/Objective/objective.css
@@ -1,18 +1,19 @@
 .Objective-page{
     height: auto;
-    padding-inline: 40px;
+    padding-inline: 72px;
     padding-block: 80px;
     display: flex;
-    gap: 100px;
+    gap: 120px;
 
 }
 
 .joinus{
     background: #B5B0E94A;
     box-shadow: 0px 4px 4px 0px #00000040;
-    width: 22%;
+    width: 449px;
     border-radius: 20px;
     padding: 30px;
+    height: 800px;
 }
 
 .whyjoin{
@@ -24,7 +25,7 @@
 
 li{
     font-size: 22px;
-    font-weight: 400px;
+    font-weight: 4077%0px;
     padding-bottom: 20px;
 }
 
@@ -38,6 +39,13 @@ li{
 
 .objectives ul li {
     color: black;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 400;
+}
+
+.objectives ul{
+    width: 72%;
+}
+.objective-heading{
+    padding-bottom: 10px
 }
