--- a/src/Compoenent/Register/Register.css
+++ b/src/Compoenent/Register/Register.css
@@ -64,3 +64,20 @@ border-radius: 10px;
     padding: 0 80px;
     padding-bottom: 80px;
 }
+
+.rowspan{
+    border-bottom: 1px solid rgb(255, 255, 255);
+    border-right: 6px solid rgb(255, 255, 255);
+    font-size: 28px;
+    text-align: left;
+    color: white;
+    border-right: none;
+    padding-left: 30px;
+    font-weight: 900px;
+
+    
+}
+
+.combined{
+    height: 50px;
+}
