--- a/src/Compoenent/Event-Details/EventDetail.css
+++ b/src/Compoenent/Event-Details/EventDetail.css
@@ -1,62 +1,201 @@
-.info-heading{
-    font-size: 36px;
+.info-heading {
+    font-size: 2.25rem;
     font-weight: 600;
     color: black;
     margin: unset;
-    /* padding-bottom: 20px; */
 }
 
-.event-timming{
+.event-timming {
     flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 48px;
-    gap: 20px;
-
+    padding-top: 3rem;
+    gap: 1.25rem;
 }
 
-.countdown{
-    box-shadow: 0px 0px 38px 8px #8f00ffb8;
-    padding: 20px;
-    width: 337px;
-    border-radius: 100px;
+.countdown {
+    box-shadow: 0px 0px 2.375rem 0.5rem #8f00ffb8;
+    padding: 1.25rem;
+    width: 90%;
+    max-width: 21rem;
+    border-radius: 6.25rem;
     background: #000000;
 }
 
-.countdown-display{
+.countdown-display {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 33px;
-    font-size: 39px;
+    gap: 2rem;
+    font-size: 2.4375rem;
     color: white;
 }
 
-.horizontal-rule{
-    width: 473px;
+.horizontal-rule {
+    width: 90%;
+    max-width: 29.5625rem;
 }
 
-.horizontal-rule hr{
-    border-top: 4px solid #000000;
+.horizontal-rule hr {
+    border-top: 0.25rem solid #000000;
     margin: unset;
 }
 
-.date{
-    font-size: 36px;
+.date {
+    font-size: 2.25rem;
     font-weight: 700;
     color: black;
+    text-align: center;
 }
 
-.venue{
-    font-size: 27px;
+.venue {
+    font-size: 1.6875rem;
     font-weight: 700;
     color: black;
     margin: unset;
 }
 
-.location{
-    font-size: 30px;
-    font-weight: 700px;
+.location {
+    font-size: 1.875rem;
+    font-weight: 700;
     color: black;
+    text-align: center;
+}
+
+@media screen and (max-width: 1200px) {
+    .info-heading {
+        font-size: 2rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+    }
+
+    .date {
+        font-size: 2rem;
+    }
+
+    .venue {
+        font-size: 1.5rem;
+    }
+
+    .location {
+        font-size: 1.75rem;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .info-heading {
+        font-size: 1.875rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+        gap: 1.75rem;
+    }
+
+    .date {
+        font-size: 1.875rem;
+    }
+
+    .venue {
+        font-size: 1.4375rem;
+    }
+
+    .location {
+        font-size: 1.625rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .info-heading {
+        font-size: 1.75rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+        gap: 1.5rem;
+    }
+
+    .date {
+        font-size: 1.75rem;
+    }
+
+    .venue {
+        font-size: 1.375rem;
+    }
+
+    .location {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .info-heading {
+        font-size: 1.625rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+        gap: 1.25rem;
+    }
+
+    .date {
+        font-size: 1.625rem;
+    }
+
+    .venue {
+        font-size: 1.3125rem;
+    }
+
+    .location {
+        font-size: 1.4375rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .info-heading {
+        font-size: 1.5rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+        gap: 1rem;
+    }
+
+    .date {
+        font-size: 1.5rem;
+    }
+
+    .venue {
+        font-size: 1.25rem;
+    }
+
+    .location {
+        font-size: 1.375rem;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .info-heading {
+        font-size: 1.375rem;
+    }
+
+    .countdown-display {
+        font-size: 42px;
+        gap: 0.875rem;
+    }
+
+    .date {
+        font-size: 1.375rem;
+    }
+
+    .venue {
+        font-size: 1.1875rem;
+    }
+
+    .location {
+        font-size: 1.25rem;
+    }
 }
