Updated the team page

--- a/src/Compoenent/Team/Team.css
+++ b/src/Compoenent/Team/Team.css
@@ -29,3 +29,33 @@
     padding: 0PX 50PX;
     padding-bottom: 20px;
 }
+
+.category{
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 44px;
+    color: white;
+    font-weight: 600;
+    padding-top: 20px;
+}
+
+.subcategory{
+    font-size: 42px;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    padding-left: 40px;
+    font-weight: 600;
+    padding-top: 30px;
+}
+
+.list{
+    list-style: none;
+
+}
+
+.nameofmember{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 34px;
+    color: white;
+    padding-left: 48px;
+}
