--- a/src/Compoenent/Footer/Footer.css
+++ b/src/Compoenent/Footer/Footer.css
@@ -1,43 +1,155 @@
-.footer-container{
+.footer-container {
     background: #302F2F;
-    padding-inline: 82px;
-    padding-top: 60px;
-    padding-bottom: 30px;
+    padding: 60px 5% 30px;
     display: flex;
-    gap: 350px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
 }
 
-.upes-logo{
-    padding-top: 30px;
-    padding-bottom: 30px;
+.upes-logo {
+    padding: 30px 0;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.upes-logo img{
-    width: 147px;
-    height: 50px;
+
+.upes-logo img {
+    max-width: 147px;
+    height: auto;
 }
 
-.Contact-heading{
+.Contact-heading,
+.About-heading {
     font-size: 22px;
     font-weight: 600;
     color: #FFFFFF;
 }
-.About-heading{
-    font-size: 22px;
-    font-weight: 600;
-    color: #FFFFFF;
 
-}
-
-.About-para{
+.About-para,
+.Contact-para {
     font-size: 19px;
     color: #FFFFFF;
     padding-top: 20px;
 }
-.Contact-para{
-    font-size: 19px;
-    color: #FFFFFF;
-    padding-top: 20px;
+
+/* Responsive adjustments */
+@media screen and (max-width: 1400px) {
+    .footer-container {
+        gap: 100px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .footer-container {
+        gap: 50px;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .footer-container {
+        padding: 55px 4% 28px;
+        gap: 40px;
+    }
+    
+    .Contact-heading,
+    .About-heading {
+        font-size: 21px;
+    }
+    
+    .About-para,
+    .Contact-para {
+        font-size: 18px;
+    }
+
+    .upes-logo img {
+        max-width: 130px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .footer-container {
+        padding: 50px 4% 25px;
+    }
+    
+    .Contact-heading,
+    .About-heading {
+        font-size: 20px;
+    }
+    
+    .About-para,
+    .Contact-para {
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 40px;
+    }
+
+    .upes-logo,
+    .About-Section,
+    .contact-section {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .footer-container {
+        padding: 40px 3% 20px;
+    }
+
+    .Contact-heading,
+    .About-heading {
+        font-size: 18px;
+    }
+
+    .About-para,
+    .Contact-para {
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .footer-container {
+        padding: 30px 3% 15px;
+    }
+
+    .Contact-heading,
+    .About-heading {
+        font-size: 16px;
+    }
+
+    .About-para,
+    .Contact-para {
+        font-size: 14px;
+    }
+
+    .upes-logo img {
+        max-width: 120px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .footer-container {
+        padding: 20px 2% 10px;
+    }
+
+    .Contact-heading,
+    .About-heading {
+        font-size: 15px;
+    }
+
+    .About-para,
+    .Contact-para {
+        font-size: 13px;
+    }
+
+    .upes-logo img {
+        max-width: 100px;
+    }
 }
