--- a/src/Compoenent/ConferenceCard/ConferenceCard.css
+++ b/src/Compoenent/ConferenceCard/ConferenceCard.css
@@ -26,3 +26,20 @@
     font-weight: bold;
     width: 99%;
   }
+
+  .card:hover {
+    transform: scale(1.05);
+  }
+
+  .hover-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 10px;
+    border-radius: 5px;
+    transition: opacity 0.3s ease;
+  }
+  
