--- a/src/Compoenent/About-Event/About.css
+++ b/src/Compoenent/About-Event/About.css
@@ -96,6 +96,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .submision-deadline{
@@ -103,6 +104,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 
@@ -111,7 +113,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 /* Small devices (landscape phones, 576px and up) */
